--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <canvas class="confetti" id="confetti"></canvas>
       <div class="big">YEY!! 🥰</div>
 <img 
-  src="us.jpg" 
+  src="us" 
   alt="Us 💖"
   style="
     margin:14px auto 10px;
